<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <Button
            android:id="@+id/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/colorPrimary"
            android:text="@string/_1" />

    <Button
            android:id="@+id/button2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/_2" />

    <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/_3" />
</LinearLayout>